crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive cancel.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run
@ expect-milestone: task-select::0
Search task (↑/↓ to move, enter to select):
> build: echo build app
  lint: echo lint app
  test: echo test app
  lib#build: echo build lib
  lib#lint: echo lint lib
  lib#test: echo test lib
  lib#typecheck: echo typecheck lib
  task-select-test#check: echo check root
  (…4 more)
@ write-key: escape
