crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive escape clears query.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run
@ expect-milestone: task-select::0
Search task (↑/↓ to move, enter to select):
> build: echo build app
  lint: echo lint app
  test: echo test app
  lib#build: echo build lib
  lib#lint: echo lint lib
  lib#test: echo test lib
  lib#typecheck: echo typecheck lib
  task-select-test#check: echo check root
  task-select-test#clean: echo clean root
  task-select-test#deploy: echo deploy root
  task-select-test#docs: echo docs root
  task-select-test#format: echo format root
  (…3 more)
@ write: lin
@ expect-milestone: task-select:lin:0
Search task (↑/↓ to move, enter to select): lin
> lint: echo lint app
  lib#lint: echo lint lib
@ write-key: escape
@ expect-milestone: task-select::0
Search task (↑/↓ to move, enter to select):
> build: echo build app
  lint: echo lint app
  test: echo test app
  lib#build: echo build lib
  lib#lint: echo lint lib
  lib#test: echo test lib
  lib#typecheck: echo typecheck lib
  task-select-test#check: echo check root
  task-select-test#clean: echo clean root
  task-select-test#deploy: echo deploy root
  task-select-test#docs: echo docs root
  task-select-test#format: echo format root
  (…3 more)
@ write-key: enter
~/packages/app$ echo build app ⊘ cache disabled
build app
