crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-select/snapshots/interactive search other package task.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
info:
  cwd: packages/app
---
> vp run
@ expect-milestone: task-select::0
Select a task (↑/↓, Enter to run, Esc to clear):

  › build:                   echo build app
    lint:                    echo lint app
    test:                    echo test app
    lib#build:               echo build lib
    lib#lint:                echo lint lib
    lib#test:                echo test lib
    lib#typecheck:           echo typecheck lib
    task-select-test#check:  echo check root
    task-select-test#clean:  echo clean root
    task-select-test#deploy: echo deploy root
    task-select-test#docs:   echo docs root
    task-select-test#format: echo format root
  (…3 more)
@ write: typec
@ expect-milestone: task-select:typec:0
Select a task (↑/↓, Enter to run, Esc to clear): typec

  › lib#typecheck: echo typecheck lib
@ write-key: enter
Selected task: lib#typecheck
~/packages/lib$ echo typecheck lib ⊘ cache disabled
typecheck lib
